@@ -1,49 +1,43 @@
-package com.example.Bright_Aid.service;
+package com.example.Bright_Aid.Security;
 
 import com.example.Bright_Aid.Entity.User;
 import com.example.Bright_Aid.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class CustomUserDetailsService implements UserDetailsService {
 
     private final UserRepository userRepository;
 
     @Override
-    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-
-        if (!user.getIsActive()) {
-            throw new UsernameNotFoundException("User account is inactive");
-        }
+                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
 
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPasswordHash(),
-                user.getIsActive(),
-                true,
-                true,
-                true,
                 getAuthorities(user)
         );
     }
 
     private Collection<? extends GrantedAuthority> getAuthorities(User user) {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+        String role;
+        if (user.getUserType() != null) {
+            role = "ROLE_" + user.getUserType().name();
+        } else {
+            role = "ROLE_USER";
+        }
+        return List.of(new SimpleGrantedAuthority(role));
     }
 }
